<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>in.systemhalted.kisoku</groupId>
  <artifactId>kisoku-parent</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>kisoku-parent</name>
  <description>Decision table rule engine - parent POM.</description>

  <modules>
    <module>kisoku-api</module>
    <module>kisoku-runtime</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>21</maven.compiler.release>
    <junit.jupiter.version>5.10.2</junit.jupiter.version>
    <surefire.version>3.2.5</surefire.version>
    <failsafe.version>3.2.5</failsafe.version>
    <spotless.version>2.43.0</spotless.version>
    <googlejavaformat.version>1.22.0</googlejavaformat.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>in.systemhalted.kisoku</groupId>
        <artifactId>kisoku-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${junit.jupiter.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.11.0</version>
          <configuration>
            <release>21</release>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${surefire.version}</version>
          <configuration>
            <excludes>
              <exclude>**/*IT.java</exclude>
            </excludes>
            <!-- Exclude scale and memory tests by default -->
            <excludedGroups>scale,memory</excludedGroups>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${failsafe.version}</version>
          <executions>
            <execution>
              <goals>
                <goal>integration-test</goal>
                <goal>verify</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <includes>
              <include>**/*IT.java</include>
            </includes>
          </configuration>
        </plugin>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>${spotless.version}</version>
          <configuration>
            <java>
              <googleJavaFormat>
                <version>${googlejavaformat.version}</version>
              </googleJavaFormat>
            </java>
          </configuration>
          <executions>
            <execution>
              <id>spotless-check</id>
              <phase>verify</phase>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <!-- Memory tests profile: run with -Dkisoku.runMemoryTests=true -->
    <profile>
      <id>memory-tests</id>
      <activation>
        <property>
          <name>kisoku.runMemoryTests</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <!-- Include memory-tagged tests -->
              <excludedGroups>scale</excludedGroups>
              <groups>memory</groups>
              <argLine>-Xmx1536m -XX:MaxDirectMemorySize=2g</argLine>
            </configuration>
          </plugin>
          <plugin>
            <artifactId>maven-failsafe-plugin</artifactId>
            <configuration>
              <groups>memory</groups>
              <argLine>-Xmx1536m -XX:MaxDirectMemorySize=2g</argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <!-- Scale tests profile: run with -Dkisoku.runScaleTests=true -->
    <profile>
      <id>scale-tests</id>
      <activation>
        <property>
          <name>kisoku.runScaleTests</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <!-- Include scale and memory tests when running scale tests -->
              <excludedGroups combine.self="override"></excludedGroups>
              <groups>scale,memory</groups>
              <argLine>-Xmx1536m -XX:MaxDirectMemorySize=4g</argLine>
            </configuration>
          </plugin>
          <plugin>
            <artifactId>maven-failsafe-plugin</artifactId>
            <configuration>
              <groups>scale,memory</groups>
              <argLine>-Xmx1536m -XX:MaxDirectMemorySize=4g</argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
